# SuperResolution

./: .gitignore  CMakeLists.txt  COPYING  README.md  SuperResolution.cpp  SuperResolution.h  main.cpp
CMake/: FindTBB.cmake
image/: main.cpp
lib/: CMakeLists.txt
lib/include/: btv_l1.hpp  btv_l1_gpu.hpp  image_super_resolution.hpp  optical_flow.hpp  super_resolution.hpp  super_resolution_common.hpp  video_super_resolution.hpp
lib/src/: bilateral_total_variation.cpp  bilateral_total_variation.hpp  btv.cpp  btv.cu  btv.hpp  btv_gpu.cpp  btv_gpu.cu  btv_gpu.hpp  btv_l1.cpp  btv_l1.hpp  btv_l1_gpu.cpp  btv_l1_gpu.cu  btv_l1_gpu.hpp  cpu_gpu_transform.cpp  cpu_gpu_transform.hpp  exampled_based.cpp  exampled_based.hpp  extract_patch.cpp  extract_patch.hpp  input_array_utility.cpp  input_array_utility.hpp  interpolation.cpp  interpolation.hpp  motion_estimation.cpp  motion_estimation.hpp  nlm.cpp  nlm.hpp  nlm_based.cpp  nlm_based.hpp  optical_flow.cpp  optical_flow.hpp  ring_buffer.hpp  super_resolution.cpp  tv-l1.cpp  tv-l1.hpp  tv-l1_gpu.cpp  tv-l1_gpu.cu  tv-l1_gpu.hpp
samples/: CMakeLists.txt
samples/image/: CMakeLists.txt  main.cpp
samples/quality_test/: CMakeLists.txt  main.cpp
samples/video/: CMakeLists.txt  main.cpp
single_image/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
video/: main.cpp
